@startuml
!include style.puml
!pragma layout smetana
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR
top to bottom direction

package "Edit parser structure" {
interface "<<interface>>\nParser<T>" as Parser
class EditCommandParser
class "SubcommandDispatcherParser<EditCommand>" as Dispatcher

class EditPersonCommandParser
class EditApptCommandParser
class EditAttdCommandParser

abstract class "{abstract}\nEditCommand" as EditCommand
class EditPersonCommand
class EditApptCommand
class EditAttdCommand
}

EditCommandParser .up.|> Parser
EditPersonCommandParser .up.|> Parser
EditApptCommandParser .up.|> Parser
EditAttdCommandParser .up.|> Parser

EditCommandParser *--> Dispatcher : owns
Dispatcher ..> Parser : dispatches to
EditCommandParser ..> EditCommand : <<returns>>

EditPersonCommandParser ..> EditPersonCommand : <<create>>
EditApptCommandParser ..> EditApptCommand : <<create>>
EditAttdCommandParser ..> EditAttdCommand : <<create>>

note right of Dispatcher
Maps each edit subcommand word
such as `student`, `appt`, and `attd`
to its concrete parser.
end note

note right of EditPersonCommandParser
The omitted concrete parsers follow
the same parser-to-command creation pattern.
end note

@enduml
